--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -14,12 +14,12 @@
         <aside class="container" id="other-pins">
           <div class="row">
             <div class="col-sm-12 col-xs-12">
-              <a href="#" class="visible-xs-block	"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>opzioni mappa</a>
-              <label><input type="checkbox" name="fontanelle" value="1" />Fontanelle</label>
-              <label><input type="checkbox" name="parcheggi" value="2" />Parcheggi auto</label>
-              <label><input type="checkbox" name="bar" value="3" />Bar</label>
-              <label><input type="checkbox" name="ristoranti" value="4" />Ristoranti</label>
-              <label><input type="checkbox" name="alert" value="5" />Alert Utenti</label>
+              <a href="#" class="visible-xs-block" tabindex="1"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>opzioni mappa</a>
+              <!--<label><input type="checkbox" name="fontanelle" value="1" />Fontanelle</label>-->
+              <label><input type="checkbox" name="parcheggi" value="2" tabindex="2" />Parcheggi auto</label>
+              <label><input type="checkbox" name="bar" value="3" tabindex="3" />Bar</label>
+            <!--  <label><input type="checkbox" name="ristoranti" value="4" />Ristoranti</label>-->
+              <label><input type="checkbox" name="alert" value="5" tabindex="4" />Alert Utenti</label>
             </div>
           </div>
         </aside>
@@ -77,11 +77,11 @@
                   <h3>Annunci</h3>
                   <h4>Hotel Bologna</h4>
                   <p>4 stelle, moderno, con ristorante chic<br/>
-                    <a href="#">vai al sito</a>
+                    <a href="#" tabindex="12">vai al sito</a>
                   </p>
                   <h4>Ristorante trattoria al borgo</h4>
                   <p>$ristorante vegano<br/>
-                    <a href="#">vai al sito</a>
+                    <a href="#" tabindex="13">vai al sito</a>
                   </p>
               </div>
             </aside>
@@ -96,7 +96,7 @@
             <div class="row background-red" style="margin:0px">
               <section class="col-sm-9" id="menu1">
 
-                  <label for="commentType">Filtra Commenti</label> <select name="commentType" id="commentType">
+                  <label for="commentType">Filtra Commenti</label> <select name="commentType" id="commentType" tabindex="5">
                                                             <option value="-1">Tutti</option>
                                                             <option value="0">Generali</option>
                                                             <% var i = 1; percorsoObj[0]['scheda']['tappe'].forEach(function tappe(objTappe) {
@@ -109,7 +109,7 @@
               </section>
               <section class="col-sm-3" id="menu2">
 
-                  <a href="#">Inserisci commento</a>
+                  <a href="#" tabindex="6">Inserisci commento</a>
 
               </section>
             </div>
@@ -120,10 +120,10 @@
             <form method="post" action="/insert-comment" class="row">
 
                 <div class="col-sm-12"><label for="typec">Tipo di commento </label><br/>
-                  <select name="typec" id="typec">
+                  <select name="typec" id="typec" tabindex="7">
                                                             <option value="0">Generale</option>
                                                             <% var i = 1; percorsoObj[0]['scheda']['tappe'].forEach(function tappe(objTappe) {
-                                                                if (objTappe== true) { %>
+                                                                if (objTappe[0]== true) { %>
                                                                     <option value="<%= i%>">Tappa <%= i%></option>
                                                             <% i++ }
                                                               }) %>
@@ -131,20 +131,20 @@
                 </div>
                 <div class="col-sm-6">
                   <label for="nome">Nome </label><br/>
-                  <input type="text" name="nome" id="nome" required  />
+                  <input type="text" name="nome" id="nome" required  tabindex="8" />
                 </div>
                 <div class="col-sm-6">
                   <label for="email">Email </label><br/>
-                  <input type="email" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$" required  />
+                  <input type="email" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$" required tabindex="9"  />
                 </div>
 
                 <div class="clearfix"></div>
                 <div class="col-sm-12">
                   <label for="commento">Commento</label><br/>
-                  <textarea id="commento" name="commento" required></textarea>
+                  <textarea id="commento" name="commento" required tabindex="10"></textarea>
                 </div>
                 <div class="col-sm-9"><em>I campi sono tutti obbligatori</em></div>
-                <div class="col-sm-3"><input type="submit" value="inserisci"></div>
+                <div class="col-sm-3"><input type="submit" value="inserisci" tabindex="11"></div>
 
               <!--  <div class="col-md-12"><p class="msg wait">messaggio</p></div>-->
 
@@ -152,6 +152,7 @@
           </section>
 
           <div class="clearfix"></div>
+          <div id="listacommenti">
           <article class="col-sm-9 corpo-commento">
             <p>1.12.16 | <strong>Alex88</strong><br/>
               questo è un commento di alex 88<br/>ciao ciao ciao
@@ -191,7 +192,7 @@
           </article>
         </article>
       </article>
-
+    </div>
       <% include parziale/footer %>
 
 
