--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -152,44 +152,10 @@
           </section>
 
           <div class="clearfix"></div>
-          <div id="listacommenti">
-          <article class="col-sm-9 corpo-commento">
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-              questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-          </article>
-          <article class="col-sm-9 corpo-commento">
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-              questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-          </article>
-          <article class="col-sm-9 corpo-commento">
-            <div class="tappa">1</div>
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-                  questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-
-          </article>
-          <article class="col-sm-9 corpo-commento">
-            <div class="tappa">2</div>
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-                  questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-
-          </article>
-          <article class="col-sm-9 corpo-commento">
-            <div class="tappa">1</div>
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-                  questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-
-          </article>
-
-          <article class="col-sm-9 corpo-commento">
-            <p>1.12.16 | <strong>Alex88</strong><br/>
-              questo è un commento di alex 88<br/>ciao ciao ciao
-            </p>
-          </article>
+          <div id="listacommenti" style="display:table; width:100%">
+          </div>
+          <div id="paginazione" class="col-sm-9">
+          </div>
         </article>
       </article>
     </div>
@@ -199,6 +165,7 @@
   <!-- inserire google analytics -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHISEgt5-1Z6cK7pyntyeQ9ffd3TJa11k&callback=initMapScheda"></script>
+  <script src="/js/pagination.min.js"></script>
   <script src="/js/jquery.cookie.js"></script>
   <script src="/js/bikeaway.js"></script>
   <script>
