inserimento commenti + scrolldown mappa

--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-sm-6">
                   <label for="email">Email </label><br/>
-                  <input type="email" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$" required tabindex="9"  />
+                  <input type="email" name="email" id="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,8}$" required tabindex="9"  />
                 </div>
 
                 <div class="clearfix"></div>
