--- a/template/ricerca.ejs
+++ b/template/ricerca.ejs
@@ -43,8 +43,8 @@
                                                       <option value="3">Distanza Decrescente</option>
                                                       <option value="4">Difficoltà Crescente</option>
                                                       <option value="5">Difficoltà Decrescente</option>
-                                                      <option value="6">Vicini > distanti</option>
-                                                      <option value="7">distanti > vicini</option>
+                                                  <!--    <option value="6">Vicini > distanti</option>
+                                                      <option value="7">distanti > vicini</option>-->
                                                     </select>
             </section>
 
@@ -97,7 +97,7 @@
           </section>
 
           <!-- cambiarae in col-sm-10 -->
-          <article class="col-sm-9 col-sm-pull-3">
+          <article class="col-sm-9 col-sm-pull-3" id="result">
             <div class="row">
 
               <% var tabindex=11;if(serp==undefined) { %>
