iniziato i filtri in js

--- a/template/category.ejs
+++ b/template/category.ejs
@@ -78,7 +78,7 @@
                                                             </select>
                     </div>
                 </div>
-              <label><input type="checkbox" name="bambini" value="1" tabindex="6" />vicino a me</label><br />
+              <!--<label><input type="checkbox" name="bambini" value="1" tabindex="6" />vicino a me</label><br />-->
               <label><input type="checkbox" name="vicino" value="1" tabindex="7"  />adatto ai bambini</label><br/>
 
               <button type="button" tabindex="8">applica</button>
