--- a/template/ricerca.ejs
+++ b/template/ricerca.ejs
@@ -87,7 +87,7 @@
                                                             </select>
                     </div>
                 </div>
-              <label><input type="checkbox" name="bambini" value="1" tabindex="8" />vicino a me</label><br />
+              <!--<label><input type="checkbox" name="bambini" value="1" tabindex="8" />vicino a me</label><br />-->
               <label><input type="checkbox" name="vicino" value="1" tabindex="9"  />adatto ai bambini</label>
                 <button type="button" tabindex="10">applica</button>
 
