sistemazione pin per filtri

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -49,8 +49,8 @@
                                                                   </select><br/>
                         </div>
                         <div class="col-sm-4 col-sm-push-0 col-xs-6 col-xs-push-6">
-                          <label><input type="checkbox" name="bambini" value="1" tabindex="10" />vicino a me</label><br />
-                          <label><input type="checkbox" name="vicino" value="1" tabindex="11"  />adatto ai bambini</label><br/>
+                          <label><input type="checkbox" name="vicino" value="1" tabindex="10" />vicino a me</label><br />
+                          <label><input type="checkbox" name="bambini" value="1" tabindex="11"  />adatto ai bambini</label><br/>
                         </div>
                         <div class="col-sm-4 col-sm-pull-0 col-xs-6 col-xs-pull-6">
                           <h6>Categorie</h6>
