sistemazione css commenti mobile

--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -14,7 +14,7 @@
         <aside class="container" id="other-pins">
           <div class="row">
             <div class="col-sm-12 col-xs-12">
-              <a href="#" class="visible-xs-block" tabindex="1"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>opzioni mappa</a>
+              <!--<a href="#" class="visible-xs-block" tabindex="1"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>opzioni mappa</a>-->
               <!--<label><input type="checkbox" name="fontanelle" value="1" />Fontanelle</label>-->
               <label id="parking"><input type="checkbox" name="parcheggi" value="2" tabindex="2" />Parcheggi auto <span></span></label>
               <label id="bar"><input type="checkbox" name="bar" value="3" tabindex="3" />Bar <span></span></label>
