--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -42,7 +42,7 @@
             <h1><%= percorsoObj[0]['scheda']['title'] %></h1>
           </header>
         </div>
-        <div class="row" id="content">
+        <div class="row" id="content" data-lat="<%= percorsoObj[0]['coordinates'][0][0]%>" data-lng="<%= percorsoObj[0]['coordinates'][0][1]%>">
             <div class="col-sm-9">
               <p><%- percorsoObj[0]['scheda']['txt'] %></p>
               <p class="tags"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><%= percorsoObj[0]['categoria'][0]['title'] %></p>
@@ -158,7 +158,6 @@
           </div>
         </article>
       </article>
-    </div>
       <% include parziale/footer %>
 
 
