--- a/template/css/layout.css
+++ b/template/css/layout.css
@@ -308,9 +308,39 @@ body {
 }
 
 /* pubblicità */
-#adv div p {
-  min-height: 200px;
-  background-color: #ccc;
+#adv {
+  height: auto;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+#adv h5 {
+  color:#ffc752;
+  font-size: 13px;
+  margin: 0px 0px 13px 0px;
+}
+#adv div a  {
+  min-height: 150px;
+  display: block;
+  width: auto;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px rgba(0,0,0,0.35)
+}
+#adv div a h6 {
+  font-size: 16px;
+  color: #000;
+  margin: 8px 8px 12px 8px;
+}
+#adv div a:hover,
+#adv div a:focus {
+  text-decoration: none;
+}
+#adv div a p {
+  font-size: 14px;
+  color: #666;
+  margin: 0px 8px 0px 8px;
+}
+#adv div a p.link {
+  color: #9d0029;
 }
 
 /* piede */
