--- a/template/percorso.ejs
+++ b/template/percorso.ejs
@@ -1,3 +1,4 @@
+
 <% include parziale/head %>
 
 
@@ -72,18 +73,8 @@
               <p class="note"><strong>note</strong><br/> <%- percorsoObj[0]['scheda']['note'] %></p>
               <% } %>
             </div>
-            <aside class="col-sm-3">
-              <div class="background-yellow">
-                  <h3>Annunci</h3>
-                  <h4>Hotel Bologna</h4>
-                  <p>4 stelle, moderno, con ristorante chic<br/>
-                    <a href="#" tabindex="12">vai al sito</a>
-                  </p>
-                  <h4>Ristorante trattoria al borgo</h4>
-                  <p>$ristorante vegano<br/>
-                    <a href="#" tabindex="13">vai al sito</a>
-                  </p>
-              </div>
+            <aside class="col-sm-3" id="annunci">
+            
             </aside>
         </div>
         <article class="row" id="commenti">
